# kantan

./: .gitignore  Cargo.toml  LICENSE  README.md  grammar.txt  out  test.kan  todo.org
src/: cli.rs  lib.rs  main.rs
src/cfg/: mod.rs
src/codegen/: mod.rs
src/codegen/llvm/: context.rs  mod.rs  pass.rs  target.rs  wrapper.rs
src/mir/: address.rs  blockmap.rs  builder.rs  cfg.rs  dag.rs  func.rs  mod.rs  names.rs  tac.rs
src/parse/: ast.rs  error.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/parsing/: ast.rs  error.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/resolve/: error.rs  mod.rs  modmap.rs  symbol.rs
src/tac/: mod.rs
src/types/: mod.rs
test/: main.kan
test/mod/: mod.kan
test/other/: mod.kan
tests/: runner.rs  test_parse_error.rs  test_resolve_error.rs
tests/files/: assign-assign.kan  bintree.kan  chars.kan  closure-add.kan  closure-pass.kan  deref-call-return.kan  fib.kan  float-add.kan  float-cmp.kan  helloworld.kan  if-statements.kan  inner-closure-add.kan  inner-struct-assign.kan  linked-list.kan  param-assign.kan  pointer_param.kan  ptr-arith.kan  ref-op-operator.kan  simple-array.kan  simple-closure.kan  simple-malloc.kan  simple-return-closure.kan  string-format.kan  void-ptr-cast.kan  void-ptr2ptr-deref.kan
tests/files/modules/: bintree.kan  lib.kan  main.kan
