[package]
name = "kantan"
version = "0.1.0"
authors = ["Funkschy <felixschoeller@outlook.de>"]
edition = "2018"
description = "A compiler for the Kantan programming language"
keywords = ["compiler", "rust", "parser", "kantan"]

[dependencies]
ansi_term = "0.11.0"
unicode-width = "0.1.5"
llvm-sys = { version = "70.1.0", optional = true }

[features]
llvm = ["llvm-sys"]
